Règle le bug signalé par Frédérik Cassor

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ Maintainer: Joël Gombin <joel.gombin@gmail.com>
 Description: Ce package offre des outils pour nettoyer les fichiers électoraux
     du ministère de l'intérieur.
 License: GPL3
+Suggests: testthat
