--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,6 @@ Maintainer: Joël Gombin <joel.gombin@gmail.com>
 Description: Ce package offre des outils pour nettoyer les fichiers électoraux
     du ministère de l'intérieur.
 License: GPL3
-
+Encoding: UTF8
+Imports:
+    shiny
