FIX to comply with recent versions of dplyr/tibble

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,4 @@ Description: Ce package offre des outils pour nettoyer les fichiers électoraux
 License: GPL3
 Encoding: UTF-8
 Language: fr
-Imports:
-    shiny
+Depends: shiny, dplyr, tidyselect
